# Template_ImGui_SDL3

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VSWorkspaceSettings.json  add_vcpkg_submodule.bat  vcpkg.json
cmake/triplets/: wasm32-emscripten-multithreaded.cmake
include/: app.cpp  app.h  main.cpp
include/backend/: emscripten_browser_clipboard.h  image_loader.cpp  image_loader.h  platform.cpp  platform.h
static/: shell.html
